# ASL-Parameter-Generator

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docs.json  pyproject.toml
apps/backend/: .gitignore  Dockerfile  requirements.txt
apps/backend/app/: main.py
apps/backend/app/routers/: reports.py
apps/backend/tests/: test_report.py
apps/frontend/: Dockerfile  package.json
apps/frontend/src/app/: layout.tsx  page.tsx
apps/frontend/src/components/: BasicReport.tsx  Errors.tsx  ExtendedReport.tsx  GeneratedMethods.tsx  MetadataTable.tsx  MethodsPreview.tsx  ParametersTable.tsx  Upload.tsx  UploadCard.tsx  UploadPanel.tsx
apps/frontend/src/enums/: UploadDataType.ts  UploadTypes.ts  index.ts
apps/frontend/src/providers/: AppProvider.tsx
apps/frontend/src/services/: apiReport.ts
apps/frontend/src/types/: NavigationTypes.ts  ReportResponseType.ts  index.ts
apps/frontend/src/utils/: countingUtils.ts  index.ts  (+1 more)
docs/: index.mdx
docs/development/: architecture.mdx  getting-started.mdx
docs/user-guide/: package.mdx  quick-start.mdx
package/: main.py  pyproject.toml
package/converters/: base_converter.py  dicom_to_nifti_converter.py
package/core/: config.py  exceptions.py  logging.py
package/core/config/: allowed_file_types.yaml
package/io/readers/: base_reader.py  nifti_reader.py
package/io/writers/: base_writer.py  json_writer.py
package/modalities/asl/: processor.py  utils.py  validator.py
package/modalities/testdsc/: __init__.py  processor.py  validator.py
package/src/pyaslreport/: main.py
package/utils/: general_utils.py
(+59 files in other folders)
